--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
      </div>
     </header>
     <main>
-        <section class="brand-section">
+        <section>
+            <div class="brand-section">
             <div class="alibaba">
                 <img src="./logos/Alibaba.svg" alt="">
             </div>
@@ -64,7 +65,7 @@
             <div class="alibaba">
                 <img src="./logos/Target.svg" alt="">
             </div>
-           
+        </div>
         </section>
 
         <!-- popular collection section start here -->
