added some code here

--- a/index.html
+++ b/index.html
@@ -205,14 +205,16 @@
         
         <section class="last-section">
             <div class="last-banner">
+                <div class="banner-img">
+                    <img src="./images/gear.png" alt="">
+                </div>
                 <div class="banner-text">
-                    <h1>Start your jurny as a influencer</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem voluptas necessitatibus praesentium facere eveniet laboriosam, aut error veniam cumque placeat!</p>
+                    <h1>feature product at one place</h1>
+                    <p>Lorem ipsum, dolor sit amet  
+                        consectetur adipisicing elit. Autem <br> voluptas necessitatibus you can add more word placeat!</p>
                     <button class="btn-primary">Preebook Now <span><i class="fas fa-arrow-right"></i></span></i></button>
                 </div>
-                <div class="banner-img">
-                    <img src="./images/main-camera.png" alt="">
-                </div>
+                
              </div>
         </section>
     </main>
