now added more code

--- a/index.html
+++ b/index.html
@@ -211,15 +211,25 @@
                 <div class="banner-text">
                     <h1>feature product at one place</h1>
                     <p>Lorem ipsum, dolor sit amet  
-                        consectetur adipisicing elit. Autem <br> voluptas necessitatibus you can add more word placeat!</p>
+                        consectetur adipisicing elit. <br> Autem voluptas necessitatibus you can add more word placeat!</p>
                     <button class="btn-primary">Preebook Now <span><i class="fas fa-arrow-right"></i></span></i></button>
                 </div>
                 
              </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer-section">
+        <div class="disclaimer">
+            <h2>Influencer Products</h2>
+            <p>Copywrite &copy;2023 Anis</p>
+            <p>All right reserv</p>
+        </div>
+        <div class="social-icon">
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+            <i class="fa-brands fa-square-youtube"></i>
+            <i class="fa-brands fa-square-twitter"></i>
+        </div>
     </footer>
 
 </body>
